--- a/setup.cfg
+++ b/setup.cfg
@@ -1,6 +1,7 @@
 [metadata]
 name = saidai-ical-generator
-version = 0.1.0
+version = 0.1.1
+python_requires = >= 3.7
 description = ics generator from saidai-kyoumu site
 long_description = file: README.md
 long_description_content_type = text/markdown
