--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,15 +1,15 @@
 [tool.poetry]
 name = "saidai_ical_generator"
-version = "0.2.0"
+version = "0.3.0"
 description = ""
 authors = ["kimotu4632uz <32472396+kimotu4632uz@users.noreply.github.com>"]
 
 [tool.poetry.dependencies]
-python = "^3.10"
+python = "^3.9"
 requests = "^2.25"
-selenium = "^3.141"
+selenium = "^4.0.0"
+chromedriver-binary-auto = "^0.1.1"
 beautifulsoup4 = "^4.10.0"
-tzlocal = "^4.1"
 
 [tool.poetry.dev-dependencies]
 pytest = "^5.2"
